crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_trailing_dims_on_method_and_annotation_element_declarators.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class TrailingMethodDims {
  int values();
}

@interface TrailingAnnotationElementDims {
  int value()[];
}

diagnostics:
(none)
