crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_type_shapes_and_type_arguments.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class Types<T extends Number & Comparable<T>> {
  int primitive;
  double floating;
  java.util.Map<String, ? extends Number> upper;
  java.util.List<? super T>[] lower;
  T[][] matrix;
}

diagnostics:
(none)
