crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_unary_postfix_cast_and_switch_expressions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class ExpressionEdges {
  int method(Object value) {
    int i = 0;
    ++i;
    --i;
    i++;
    i--;
    int cast = (int) value;
    return switch (value) {
      case Integer n -> {
        yield n;
      }
      case Character c -> {
        yield (char) c;
      }
      default -> -i;
    };
  }
}

diagnostics:
(none)
