crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_unnamed_lambda_parameter.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class UnnamedLambdaParameter {
  void method() {
    java.util.function.IntUnaryOperator zero = _ -> 0;
  }
}

diagnostics:
(none)
