crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_unnamed_variable_declarator_ids.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class UnnamedVariableDeclarators {
  void method(Object _, java.util.List<String> values) throws Exception {
    var _ = values;
    try (
      AutoCloseable _ = open()
    ) {
    } catch (Exception _) {
    }
    java.util.function.IntUnaryOperator zero = (int _) -> 0;
  }

  AutoCloseable open() {
    return null;
  }
}

diagnostics:
(none)
