crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_var_lambda_parameter.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class VarLambdaParameter {
  void method() {
    java.util.function.IntUnaryOperator identity = (var x) -> x;
  }
}

diagnostics:
(none)
