crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_var_local_variable_type.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class VarLocalVariable {
  void method(Object value) {
    final var local = value;
  }
}

diagnostics:
(none)
