crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_variable_arity_lambda_parameter.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class VarargsLambdaParameter {
  void method() {
    java.util.function.Function<String[], Integer> lengths =
      (String... values) -> values.length;
  }
}

diagnostics:
(none)
