crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__parses_yield_identifier_statement_expressions.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class YieldIdentifierStatementExpressions {
  void method() {
    yield = 1;
    yield += 2;
    yield[0] = 3;
    yield++;
    yield.foo();
  }
}

diagnostics:
(none)
