crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__single_element_annotations_and_defaults_have_structured_element_values.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
@StringSingle("test")
@NestedSingle(@Marker)
@ArraySingle({ @Marker, "x" })
class Annotated {
}

@interface StringSingle {
  String value() default "fallback";
}

@interface NestedSingle {
  Marker value() default @Marker;
}

@interface ArraySingle {
  Object[] value() default { @Marker, "y" };
}

@interface Marker {
}

diagnostics:
(none)
