crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__static_import_declarations_expose_structured_names.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
import static java.util.Collections.*;
import static java.util.Collections.emptyList;

class StaticImports {
}

diagnostics:
(none)
