crates/jolt_java_fmt/tests/snapshots/corpus__syntax__parser__switch_case_constant_can_be_a_conditional_expression.snap
---
source: crates/jolt_java_fmt/tests/corpus.rs
expression: snapshot
---
formatted:
class SwitchCaseConstantExpression {
  static final int OFFSET = 1;

  void method(int value) {
    switch (value) {
      case 1 + OFFSET -> value++;
    }
  }
}

diagnostics:
(none)
